== TODO

* Improve spec coverage for Thor::Runner
* Improve help output to list shorthand switches, too
* Investigate and fix deep namespacing ("foo:bar:baz") issues

== Current

* thor help now show information about any class/task. All those calls are
  possible:
  
    thor help describe
    thor help describe:amazing

  Or even with default namespaces:

    thor help :spec

* Thor::Runner now invokes the default task if none is supplied:

    thor describe # invokes the default task, usually help

* Thor::Runner now works with mappings:

    thor describe -h

* Added some documentation and code refactoring.

== 0.9.8, released 2008-10-20

* Fixed some tiny issues that were introduced lately.

== 0.9.7, released 2008-10-13

* Setting global method options on the initialize method works as expected:
  All other tasks will accept these global options in addition to their own.
* Added 'group' notion to Thor task sets (class Thor); by default all tasks
  are in the 'standard' group. Running 'thor -T' will only show the standard
  tasks - adding --all will show all tasks. You can also filter on a specific
  group using the --group option: thor -T --group advanced
  
== 0.9.6, released 2008-09-13

* Generic improvements

== 0.9.5, released 2008-08-27

* Improve Windows compatibility
* Update (incorrect) README and task.thor sample file
* Options hash is now frozen (once returned)
* Allow magic predicates on options object. For instance: `options.force?`
* Add support for :numeric type
* BACKWARDS INCOMPATIBLE: Refactor Thor::Options. You cannot access shorthand forms in options hash anymore (for instance, options[:f])
* Allow specifying optional args with default values: method_options(:user => "mislav")
* Don't write options for nil or false values. This allows, for example, turning color off when running specs.
* Exit with the status of the spec command to help CI stuff out some.

== 0.9.4, released 2008-08-13

* Try to add Windows compatibility.